<resources>
    <string name="app_name">Android Passport Reader</string>
    <string name="action_settings">Settings</string>
    <string name="choose_creds">Choose passport\'s credentials</string>
    <string name="title_activity_edit_document">Edit Document Activity</string>
    <string name="provide_credential">Provide Passport\'s Information</string>
    <string name="provide_passport">Passport Communication</string>
    <string name="document_number">Document number</string>
    <string name="birth_date">Birth Date</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="save">Save</string>
    <string name="tag_output">Tag Output...</string>
    <string name="total_time">Total time:</string>
    <string name="unable_to_process">Unable to process tag output.</string>
    <string name="challenge">Challenge Test</string>
    <string name="authenticate">BAC Auth Test</string>
    <string name="replay">Replay Attack</string>
    <string name="wrong">Wrong Data Test</string>
    <string name="replay_time">Replay Timing</string>
    <string name="wrong_time">Wrong D. Timing</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_number_of_attacks">Number of attacks</string>
    <string name="pref_default_number_of_attacks">10</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
