<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_credential"
    tools:context="passportreader.retrovanilla.com.androidpassportreader.EditDocumentActivity"
    android:orientation="vertical">

    <TextView android:text="@string/provide_credential" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="4dp" />

    <EditText
        android:id="@+id/add_documentnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/document_number"
        android:inputType="text"
        android:paddingBottom="5dp"
        android:paddingTop="10dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/add_birthdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/birth_date"
        android:inputType="date"
        android:paddingBottom="5dp"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/add_expirationdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/expiration_date"
        android:inputType="date"
        android:paddingBottom="5dp"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/add_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save" />

</LinearLayout>
